Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28706

QQuickItem::childAt does not handle transformations

    XMLWordPrintable

Details

    • 536c9481170c7cd84e5e78edf99ebc943d439b1a

    Description

      The childAt() function of QQuickItem does not take into account transformations of child items. If children are scaled or rotated, childAt() may return unexpected results.

      Attached is a proposed fix. The patch works by mapping the coordinates into the child item's coordinate space. It is then possible to simply compare the given coordinates to the width and height of the child item.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            brendan0powers Brendan Powers
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes