QQuickItem::childAt(x, y) takes child transformations into account

Task-number: QTBUG-28706
Change-Id: Ib1738eac1319361398b1898db341d6e4be0fe5fd
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>